Release inhibitor on sleep and shutdown.

Also fix a memory leak in login1_inhibit_cb.

[The intention was to hold one "ref" to the inhibit fd for each
connection that was waiting to disconnect, plus one "ref" for the
idle state of "waiting to be notified by logind". We correctly took
one "ref" per connection, but did not release the extra one. -smcv]

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=73599
Reviewed-by: Simon McVittie <simon.mcvittie@collabora.co.uk>